workspace(name = "flagit")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
load("//third_party:common.bzl", "clean_dep")

absl_version = "20210324.2"

http_archive(
    name = "com_google_absl",
    sha256 = "59b862f50e710277f8ede96f083a5bb8d7c9595376146838b9580be90374ee1f",
    strip_prefix = "abseil-cpp-{}".format(absl_version),
    urls = ["https://github.com/abseil/abseil-cpp/archive/refs/tags/{}.tar.gz".format(absl_version)],
)

http_archive(
    name = "com_github_google_glog",
    build_file = clean_dep("//third_party/glog:glog.BUILD"),
    sha256 = "21bc744fb7f2fa701ee8db339ded7dce4f975d0d55837a97be7d46e8382dea5a",
    strip_prefix = "glog-0.5.0",
    urls = ["https://github.com/google/glog/archive/v0.5.0.zip"],
)
